--- a/exercises/practice/bracket-push/.meta/config.json
+++ b/exercises/practice/bracket-push/.meta/config.json
@@ -1,5 +1,12 @@
 {
-  "authors": [],
+  "authors": [
+    "juhlig"
+  ],
+  "contributors": [
+    "ErikSchierboom",
+    "iHiD",
+    "NobbZ"
+  ],
   "files": {
     "solution": [],
     "test": [],
