--- a/exercises/practice/list-ops/.meta/config.json
+++ b/exercises/practice/list-ops/.meta/config.json
@@ -1,6 +1,15 @@
 {
   "blurb": "Implement basic list operations",
-  "authors": [],
+  "authors": [
+    "bgottlob"
+  ],
+  "contributors": [
+    "ErikSchierboom",
+    "iHiD",
+    "jkrukoff",
+    "juhlig",
+    "NobbZ"
+  ],
   "files": {
     "solution": [],
     "test": [],
