--- a/exercises/practice/armstrong-numbers/.meta/config.json
+++ b/exercises/practice/armstrong-numbers/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Determine if a number is an Armstrong number",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/armstrong_numbers.erl"
+    ],
+    "test": [
+      "test/armstrong_numbers_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
