--- a/exercises/practice/bank-account/.meta/config.json
+++ b/exercises/practice/bank-account/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Simulate a bank account supporting opening/closing, withdraws, and deposits of money. Watch out for concurrent transactions!",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/bank_account.erl"
+    ],
+    "test": [
+      "test/bank_account_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
