--- a/exercises/practice/clock/.meta/config.json
+++ b/exercises/practice/clock/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Implement a clock that handles times without dates.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/clock.erl"
+    ],
+    "test": [
+      "test/clock_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
