--- a/exercises/practice/custom-set/.meta/config.json
+++ b/exercises/practice/custom-set/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Create a custom set type.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/custom_set.erl"
+    ],
+    "test": [
+      "test/custom_set_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
