--- a/exercises/practice/darts/.meta/config.json
+++ b/exercises/practice/darts/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Write a function that returns the earned points in a single toss of a Darts game",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/darts.erl"
+    ],
+    "test": [
+      "test/darts_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
