--- a/exercises/practice/isbn-verifier/.meta/config.json
+++ b/exercises/practice/isbn-verifier/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Check if a given string is a valid ISBN-10 number.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/isbn_verifier.erl"
+    ],
+    "test": [
+      "test/isbn_verifier_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
