--- a/exercises/practice/list-ops/.meta/config.json
+++ b/exercises/practice/list-ops/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Implement basic list operations",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/list_ops.erl"
+    ],
+    "test": [
+      "test/list_ops_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
