--- a/exercises/practice/parallel-letter-frequency/.meta/config.json
+++ b/exercises/practice/parallel-letter-frequency/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Count the frequency of letters in texts using parallel computation.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/parallel_letter_frequency.erl"
+    ],
+    "test": [
+      "test/parallel_letter_frequency_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
