--- a/exercises/practice/pascals-triangle/.meta/config.json
+++ b/exercises/practice/pascals-triangle/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Compute Pascal's triangle up to a given number of rows.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/pascals_triangle.erl"
+    ],
+    "test": [
+      "test/pascals_triangle_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
