--- a/exercises/practice/rail-fence-cipher/.meta/config.json
+++ b/exercises/practice/rail-fence-cipher/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Implement encoding and decoding for the rail fence cipher.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/rail_fence_cipher.erl"
+    ],
+    "test": [
+      "test/rail_fence_cipher_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
