--- a/exercises/practice/robot-simulator/.meta/config.json
+++ b/exercises/practice/robot-simulator/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Write a robot simulator.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/robot_simulator.erl"
+    ],
+    "test": [
+      "test/robot_simulator_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
