--- a/exercises/practice/rotational-cipher/.meta/config.json
+++ b/exercises/practice/rotational-cipher/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Create an implementation of the rotational cipher, also sometimes called the Caesar cipher.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/rotational_cipher.erl"
+    ],
+    "test": [
+      "test/rotational_cipher_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
