--- a/exercises/practice/run-length-encoding/.meta/config.json
+++ b/exercises/practice/run-length-encoding/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Implement run-length encoding and decoding.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/run_length_encoding.erl"
+    ],
+    "test": [
+      "test/run_length_encoding_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
