--- a/exercises/practice/atbash-cipher/.meta/config.json
+++ b/exercises/practice/atbash-cipher/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Create an implementation of the atbash cipher, an ancient encryption system created in the Middle East.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/atbash_cipher.erl"
+    ],
+    "test": [
+      "test/atbash_cipher_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
