--- a/exercises/practice/book-store/.meta/config.json
+++ b/exercises/practice/book-store/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "To try and encourage more sales of different books from a popular 5 book series, a bookshop has decided to offer discounts of multiple-book purchases.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/book_store.erl"
+    ],
+    "test": [
+      "test/book_store_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
