--- a/exercises/practice/change/.meta/config.json
+++ b/exercises/practice/change/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Correctly determine change to be given using the least number of coins",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/change.erl"
+    ],
+    "test": [
+      "test/change_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
