--- a/exercises/practice/circular-buffer/.meta/config.json
+++ b/exercises/practice/circular-buffer/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "A data structure that uses a single, fixed-size buffer as if it were connected end-to-end.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/circular_buffer.erl"
+    ],
+    "test": [
+      "test/circular_buffer_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
