--- a/exercises/practice/collatz-conjecture/.meta/config.json
+++ b/exercises/practice/collatz-conjecture/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Calculate the number of steps to reach 1 using the Collatz conjecture",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/collatz_conjecture.erl"
+    ],
+    "test": [
+      "test/collatz_conjecture_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
