--- a/exercises/practice/diamond/.meta/config.json
+++ b/exercises/practice/diamond/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given a letter, print a diamond starting with 'A' with the supplied letter at the widest point.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/diamond.erl"
+    ],
+    "test": [
+      "test/diamond_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
