--- a/exercises/practice/dominoes/.meta/config.json
+++ b/exercises/practice/dominoes/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Make a chain of dominoes.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/dominoes.erl"
+    ],
+    "test": [
+      "test/dominoes_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
