--- a/exercises/practice/gigasecond/.meta/config.json
+++ b/exercises/practice/gigasecond/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given a moment, determine the moment that would be after a gigasecond has passed.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/gigasecond.erl"
+    ],
+    "test": [
+      "test/gigasecond_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
