--- a/exercises/practice/grade-school/.meta/config.json
+++ b/exercises/practice/grade-school/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given students' names along with the grade that they are in, create a roster for the school",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/grade_school.erl"
+    ],
+    "test": [
+      "test/grade_school_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
