--- a/exercises/practice/minesweeper/.meta/config.json
+++ b/exercises/practice/minesweeper/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Add the numbers to a minesweeper board",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/minesweeper.erl"
+    ],
+    "test": [
+      "test/minesweeper_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
