--- a/exercises/practice/nth-prime/.meta/config.json
+++ b/exercises/practice/nth-prime/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given a number n, determine what the nth prime is.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/nth_prime.erl"
+    ],
+    "test": [
+      "test/nth_prime_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
