--- a/exercises/practice/poker/.meta/config.json
+++ b/exercises/practice/poker/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Pick the best hand(s) from a list of poker hands.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/poker.erl"
+    ],
+    "test": [
+      "test/poker_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
