--- a/exercises/practice/prime-factors/.meta/config.json
+++ b/exercises/practice/prime-factors/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Compute the prime factors of a given natural number.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/prime_factors.erl"
+    ],
+    "test": [
+      "test/prime_factors_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
