--- a/exercises/practice/roman-numerals/.meta/config.json
+++ b/exercises/practice/roman-numerals/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Write a function to convert from normal numbers to Roman Numerals.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/roman_numerals.erl"
+    ],
+    "test": [
+      "test/roman_numerals_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
