--- a/exercises/practice/series/.meta/config.json
+++ b/exercises/practice/series/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given a string of digits, output all the contiguous substrings of length `n` in that string.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/series.erl"
+    ],
+    "test": [
+      "test/series_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
