--- a/exercises/practice/sieve/.meta/config.json
+++ b/exercises/practice/sieve/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Use the Sieve of Eratosthenes to find all the primes from 2 up to a given number.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/sieve.erl"
+    ],
+    "test": [
+      "test/sieve_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
