--- a/exercises/practice/space-age/.meta/config.json
+++ b/exercises/practice/space-age/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given an age in seconds, calculate how old someone is in terms of a given planet's solar years.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "src/space_age.erl"
+    ],
+    "test": [
+      "test/space_age_tests.erl"
+    ],
     "example": [
       ".meta/example.erl"
     ]
