--- a/config.json
+++ b/config.json
@@ -16,6 +16,9 @@
     "ace_editor_language": "erlang",
     "highlightjs_language": "erlang"
   },
+  "test_runner": {
+    "average_run_time": 2.0
+  },
   "files": {
     "solution": [
       "src/%{snake_slug}.erl"
