--- a/.appends/.github/labels.yml
+++ b/.appends/.github/labels.yml
@@ -1,3 +1,8 @@
+# ----------------------------------------------------------------------------------------- #
+# These are the repository-specific labels that augment the Exercise-wide labels defined in #
+# https://github.com/exercism/org-wide-files/blob/main/global-files/.github/labels.yml.     #
+# ----------------------------------------------------------------------------------------- #
+
 - name: "Epic"
   description: ""
   color: "3E4B9E"
@@ -54,11 +59,6 @@
   description: ""
   color: "57db83"
 
-- name: "v3-migration 🤖"
-  description: "Preparing for Exercism v3"
-  color: "E99695"
-
 - name: "wontfix"
   description: ""
   color: "ffffff"
-
