Add auto-generated unit tests and `tests.toml`

--- a/exercises/practice/accumulate/.meta/config.json
+++ b/exercises/practice/accumulate/.meta/config.json
@@ -12,7 +12,8 @@
     "magthe",
     "NobbZ",
     "tmcgilchrist",
-    "xymbol"
+    "xymbol",
+    "asakura"
   ],
   "files": {
     "solution": [
